2005-11-07  Jim Huang  <jserv@kaffe.org>

	* src/pcmanx_pure_gtk2.cpp,
	src/pcmanx_gtk2.cpp: Rename from the former to the later.

	* pcmanx-pure-gtk2.spec.in,
	pcmanx-gtk2.spec.in: Likewise.
	Added zh_CN messages file.

	* Doxygen.in,
	src/Makefile.am,
	README,
	configure.ac,
	Makefile.am: Likewise.
	Suggested by: Emfox Zhou <emfoxzhou@gmail.com>.

2005-11-07  Jim Huang  <jserv@kaffe.org>

	* plugin/src/Makefile.am: Use AM_CXXFLAGS with -fPIC.
	Reported by: Emfox Zhou <emfoxzhou@gmail.com>.

2005-11-06  Kanru Chen  <koster@debian.org.tw>

	* src/mainframe.cpp
	(CMainFrame::updateBBSList):
	Wait child exit(0), call wait(NULL)

2005-11-01  Jim Huang  <jserv@kaffe.org>

	* plugin/src/Makefile.am:
	Enforce plugin shared library to be compiled with the -fPIC option.
	Reported by: Emfox Zhou <emfoxzhou@gmail.com>.

2005-10-18  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* po/zh_CN.po: Translated by emfox.

2005-10-09  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* configure.ac: Bump release version to 0.3.3

2005-10-09  Kanru Chen  <koster@debian.org.tw>

	* ChangeLog: Reformating.

	* po/zh_TW.po: Update.

2005-10-01  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* src/appconfig.h
	src/view/telnetview.cpp
	src/view/telnetview.h
	src/generalprefpage.h
	src/mainframe.cpp
	src/appconfig.cpp
	src/generalprefpage.cpp: Use wget compressed files.

	* po/pcmanx.pot,
	po/zh_TW.po: Messages updated.

2005-09-25  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* src/mainframe.h
	src/mainframe.cpp
	po/pcmanx.pot
	po/zh_TW.po:
	Add menu item "Paste from Clipboard".

2005-09-25  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* src/mainframe.cpp: Make the ugly command shorter.

2005-09-24  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* po/zh_TW.po: Updated the Traditional Chinese Messages for BBS 
	list update

2005-09-24  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* src/mainframe.h,
	src/view/telnetcon.cpp,